# python-debbugs-graphql

./: pyproject.toml
src/debbugs_graphql/: __main__.py  client.py  main.py  schema.py  schema_graphql.py  types.py
