[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "debbugs-graphql"
version = "0.1.0"
description = "Interact for debbugs using GraphQL"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.10"
dependencies = [
    "strawberry-graphql~=0.132.1",
]

[project.scripts]
debbugs-graphql = "debbugs_graphql.cli:main"

[project.optional-dependencies]
dev = [
    "strawberry-graphql[debug-server]~=0.132.1",
    "pytest~=7.1.3",
    "pytest-icdiff~=0.6",
]

[tool.setuptools]
package-dir = {"" = "src"}
